# rust-cuda-matrix

./: Cargo.toml  Cargo.toml1  TODO.md  build_and_run.sh  build_and_run_release.sh
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/backend/: backend.rs  cpu_backend.rs  cuda_backend.rs  mod.rs
backend/src/cpu_matrix/: cpu_matrix.rs  mod.rs
backend/src/cuda_matrix/: cuda_matrix.rs  mod.rs
backend/src/matrix/: matrix.rs
cuda_matrix/: Cargo.toml
cuda_matrix/src/: lib.rs  main.rs
cuda_matrix/src/matrix_ops/: matrix_add.rs  matrix_invert.rs  matrix_mul.rs  matrix_transpose.rs  mod.rs
cuda_matrix/src/utils/: matrix_utils.rs  mod.rs
ptx/: cuda_matrix.ptx
python/: test_invert_matrix.py
src/: cuda_utils.rs  main.rs  matrix_add.rs  matrix_invert.rs  matrix_mul.rs  matrix_transpose.rs  matrix_utils.rs
test_cuda_matrix/: Cargo.toml  build_and_run.sh  build_and_run_release.sh
test_cuda_matrix/src/: main.rs
